# udemy-youtubeApp

./: .gitignore  Dockerfile.django  Dockerfile.react  docker-compose.yml
api/: db.sqlite3  pyproject.toml
api/api/: models.py  serializers.py  urls.py  views.py
api/api/migrations/: 0001_initial.py
api/youtube_app/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .eslintcache  package.json
frontend/src/: App.css  App.tsx  index.tsx
frontend/src/components/: Login.tsx  Main.tsx  NavBar.tsx  VideoDetail.tsx  VideoItem.tsx  VideoList.tsx  actionTypes.ts
frontend/src/context/: apiContext.tsx
